2007-05-15  Richard Sandiford  <richard@codesourcery.com>

	* ld-arm/vxworks1.ld: Swap .bss and .data.
	* ld-arm/vxworks1-lib.rd: Update accordingly.
	* ld-arm/vxworks1-lib.td: New test.
	* ld-arm/arm-elf.exp: Run it.

	* ld-i386/vxworks1.ld: Swap .bss and .data.
	* ld-i386/vxworks1-lib.rd: Update accordingly.
	* ld-i386/vxworks1-lib.td: New test.
	* ld-i386/i386.exp: Run it.

	* ld-mips-elf/vxworks1.ld: Swap .bss and .data.
	* ld-mips-elf/vxworks1-lib.rd: Update accordingly.
	* ld-mips-elf/vxworks1.rd: Likewise.

	* ld-powerpc/vxworks1.ld: Swap .bss and .data.
	* ld-powerpc/vxworks1-lib.rd: Update accordingly.
	* ld-powerpc/vxworks1-lib.td: New test.
	* ld-powerpc/powerpc.exp: Run it.

	* ld-sh/vxworks1.ld: Swap .bss and .data.
	* ld-sh/vxworks1-lib.rd: Update accordingly.
	* ld-sh/vxworks1-lib.td: New test.
	* ld-sh/sh-vxworks.exp: Run it.

	* ld-sparc/vxworks1.ld: Swap .bss and .data.
	* ld-sparc/vxworks1-lib.rd: Update accordingly.
	* ld-sparc/vxworks1-lib.td: New test.
	* ld-sparc/sparc.exp: Run it.

2007-05-15  Richard Sandiford  <richard@codesourcery.com>

	* ld-mips-elf/vxworks1-lib.rd: Expect the GOT relocation to be
	against symbol 0.

2007-05-15  Mark Shinwell  <shinwell@codesourcery.com>

	* ld-arm/arm-elf.exp: Add jump19 testcase.
	* ld-arm/jump19.d: New.
	* ld-arm/jump19.s: New.

2007-05-14  Richard Sandiford  <richard@codesourcery.com>

	* ld-sh/vxworks1.dd: Remove hexadecimal prefixes from constant pool
	contents.  Consistently use "!" as the comment character.
	Consistently use _PROCEDURE_LINKAGE_TABLE_ in the first PLT entry.
	* ld-sh/vxworks1-le.dd: Likewise.
	* ld-sh/vxworks1-lib.dd: Likewise.
	* ld-sh/vxworks1-lib-le.dd: Likewise.
	* ld-sh/vxworks3.dd: Likewise.
	* ld-sh/vxworks3-le.dd: Likewise.

2007-05-14  Andreas Schwab  <schwab@suse.de>

	* ld-elf/dl2a.list: New file.
	* ld-elf/shared.exp: Add test using --dynamic-list=dl2a.list.

2007-05-10  Richard Sandiford  <richard@codesourcery.com>
